overflow issues solved for target mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,7 +146,7 @@ body {
   top: 5px;
   left: 0;
   opacity: 0;
-  transition: opacity 0.5s, position 0.5s;
+  transition: opacity 0.5s;
 }
 .testimonials__item--exit-left {
   animation-name: exit-left;
@@ -226,6 +226,10 @@ body {
   width: 0.85rem;
 }
 
+:root {
+  overflow: hidden;
+}
+
 .index-body {
   min-height: 100vh;
   width: 100%;
@@ -235,7 +239,7 @@ body {
   background-position: 0 100%;
   background-size: 76.5%;
   display: flex;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .testimonials {
