--- a/src/sass/components/_testimonials.scss
+++ b/src/sass/components/_testimonials.scss
@@ -15,7 +15,7 @@
       top: 5px;
       left: 0;
       opacity: 0;
-      transition: opacity 0.5s, position 0.5s;
+      transition: opacity 0.5s;
     }
 
     /*************************************
