--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,3 +1,7 @@
+:root {
+  overflow: hidden;
+}
+
 .index-body {
   min-height: 100vh;
   width: 100%;
@@ -9,8 +13,7 @@
   background-size: 76.5%;
 
   display: flex;
-
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .testimonials {
